# wordle-hs

./: Dockerfile  LICENSE  README.md  wordle-hs.cabal
src/: Dictionary.hs  Main.hs  Puzzle.hs  Words.hs
src/Wordle/: Dictionary.hs  Puzzle.hs  Wordle.hs
test/: PuzzleSpec.hs  WordleSpec.hs
