cabal-version:      2.4
name:               wordle-hs
version:            1.1.0
synopsis:           Play Wordle on the command line.
license:            MIT
author:             Jake Scott
maintainer:         scottj1123@gmail.com
extra-source-files:
    README.md
data-files:
    words/all.txt
    words/puzzle.txt

executable wordlehs
    main-is:          Main.hs
    hs-source-dirs:   src
    other-modules:    Dictionary, Puzzle
    default-language: Haskell2010
    build-depends:    base >=4.14 && <4.15
                    , random
                    , bytestring
                    , pretty-terminal
                    , file-embed
                    , hspec
