cabal-version:      2.4
name:               wordle-hs
version:            1.1.2
synopsis:           Play Wordle on the command line.
license:            MIT
author:             Jake Scott
maintainer:         scottj1123@gmail.com
extra-source-files:
    README.md
data-files:
    words/all.txt
    words/puzzle.txt

common shared
    default-language: Haskell2010
    build-depends:    base >=4.14 && <4.15

executable wordlehs
    import:             shared
    main-is:            Wordle.hs
    hs-source-dirs:     src
    other-modules:      Dictionary, Puzzle
    build-depends:      random
                      , bytestring
                      , pretty-terminal
                      , file-embed

test-suite spec
    import:             shared
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    hs-source-dirs:     test
    other-modules:      WordleSpec, PuzzleSpec
    ghc-options:        -threaded -Wall
    build-depends:      hspec
                      -- , wordle-hs
    build-tool-depends: hspec-discover:hspec-discover == 2.*