cabal-version:      2.4
name:               wordle-hs
version:            1.1.2
synopsis:           Play Wordle on the command line.
license:            MIT
license-file:       LICENSE
author:             Jake Scott
maintainer:         scottj1123@gmail.com
build-type:         Simple
extra-source-files:
    README.md
data-files:
    words/all.txt
    words/puzzle.txt

common shared
    default-language: Haskell2010
    build-depends:    base


library
    import:             shared
    hs-source-dirs:     src/Wordle
    exposed-modules:    Puzzle, Wordle
    other-modules:      Dictionary
    build-depends:      random
                      , bytestring
                      , pretty-terminal
                      , file-embed

test-suite spec
    import:             shared
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    hs-source-dirs:     test
    other-modules:      WordleSpec, PuzzleSpec
    ghc-options:        -threaded -Wall
    build-tool-depends: hspec-discover:hspec-discover == 2.*
    build-depends:      hspec
                      , QuickCheck
                      , wordle-hs

executable wordlehs
    import:             shared
    main-is:            Main.hs
    hs-source-dirs:     src
    build-depends:      wordle-hs
